fix(browse): prevent items stretching in browse grid view

--- a/workspace/assets/css/src/backport.less
+++ b/workspace/assets/css/src/backport.less
@@ -7,7 +7,7 @@
 
 .flex-col {
 	display: flex;
-	flex: 1 1 auto;
+	flex: 0 1 auto;
 	.thumbnail {
 		display: flex;
 		flex-direction: column;
